# myUnsloth

./: JustFile  flake.nix  pyproject.toml
src/: Llama_finetuning.py  ollama_unsloth_llama3_alpaca.py
