[tool.poetry]
name = "<Project Name>"
version = "0.1.0"
description = "<Project Description>"
authors = ["Norel <norel.evoagile@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

# [virtualenv]
# in-project = true

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
torch = "^2.3.0"
# To support --no-deps in poetry as following pip command
# pip install --no-deps trl peft accelerate bitsandbytes
# poetry add --dry-run trl peft accelerate bitsandbytes
# edit pyproject.toml with the following,
trl = "*"
peft = "*"
accelerate = "*"
bitsandbytes = "*"
# And poetry lock --no-update
# If you install above packages,
# poetry install
triton = "^3.0.0"
# To install as following unsloth
# poetry add "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git"
unsloth = {git = "https://github.com/unslothai/unsloth.git", extras = ["colab-new"]}
xformers = "0.0.27.post2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
black = "^24.4.2"
pylint = "^3.2.5"
# PyQt5 = "^5.15.10"
pytest = "^8.2.2"
pynvim = "^0.5.0"
jupyter-core = "^5.7.2"
qtconsole = "^5.5.2"
pyright = "^1.1.377"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
